@@ -1,9 +1,10 @@
 package com.iems.documentservice.service;
 
+import com.iems.documentservice.client.AiServiceFeignClient;
 import com.iems.documentservice.client.ProjectServiceFeignClient;
+import com.iems.documentservice.dto.request.AiIndexCommandRequest;
 import com.iems.documentservice.dto.response.ProjectDocumentResponse;
 import com.iems.documentservice.entity.ProjectDocument;
-import com.iems.documentservice.entity.enums.AiIndexOperation;
 import com.iems.documentservice.exception.AppException;
 import com.iems.documentservice.exception.DocumentErrorCode;
 import com.iems.documentservice.repository.ProjectDocumentRepository;
@@ -18,50 +19,45 @@ import java.io.InputStream;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class ProjectDocumentService {
 
-    private static final long MAX_UPLOAD_SIZE = 50L * 1024 * 1024; // 50 MB
+    private static final long MAX_UPLOAD_SIZE = 50L * 1024 * 1024;
     private static final String DEFAULT_DOCS_FOLDER_NAME = "docs";
 
     private final ProjectDocumentRepository projectDocumentRepository;
     private final ProjectServiceFeignClient projectServiceFeignClient;
     private final ObjectStorageService objectStorageService;
     private final PermissionHelper permissionHelper;
-    private final AiIndexEventService aiIndexEventService;
+    private final AiServiceFeignClient aiServiceFeignClient;
 
-    // ────────── ACCESS CHECK ──────────
-
-    /**
-     * Verify the current JWT user is a member of the project.
-     * Throws PERMISSION_DENIED (403) if not.
-     */
     private void requireProjectMember(UUID projectId) {
         try {
             projectServiceFeignClient.checkMembership(projectId);
-        } catch (FeignException.Forbidden | FeignException.Unauthorized e) {
-            throw new AppException(DocumentErrorCode.PERMISSION_DENIED);
         } catch (FeignException e) {
-            log.warn("Membership check failed for project {}: {}", projectId, e.getMessage());
             throw new AppException(DocumentErrorCode.PERMISSION_DENIED);
         }
     }
-
-    // ────────── LIST ──────────
 
     public List<ProjectDocumentResponse> listDocuments(UUID projectId) {
         requireProjectMember(projectId);
         return projectDocumentRepository.findByProjectIdOrderByCreatedAtDesc(projectId)
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ────────── FOLDER OPERATIONS ──────────
+    public List<ProjectDocumentResponse> listEmbeddableDocuments(UUID projectId) {
+        requireProjectMember(projectId);
+        return projectDocumentRepository
+                .findByProjectIdAndAllowEmbeddedTrueAndAiIndexedTrueAndIsFolderFalseOrderByCreatedAtDesc(projectId)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+    }
 
     @Transactional
     public ProjectDocumentResponse createFolder(UUID projectId, String name, UUID parentId) {
@@ -112,34 +108,45 @@ public class ProjectDocumentService {
     }
 
     @Transactional
-    public ProjectDocumentResponse moveDocument(UUID projectId, UUID docId, UUID targetParentId) {
+    public ProjectDocumentResponse setAllowEmbedded(UUID projectId, UUID docId, boolean allowEmbedded) {
         requireProjectMember(projectId);
         ProjectDocument doc = projectDocumentRepository.findByProjectIdAndId(projectId, docId)
                 .orElseThrow(() -> new AppException(DocumentErrorCode.FILE_NOT_FOUND));
 
-        boolean wasUnderDocs = isFileUnderDocsTree(projectId, doc.getParentId(), doc.getIsFolder());
-        boolean nowUnderDocs = isFileUnderDocsTree(projectId, targetParentId, doc.getIsFolder());
+        if (Boolean.TRUE.equals(doc.getIsFolder())) {
+            throw new AppException(DocumentErrorCode.INVALID_REQUEST);
+        }
 
-        doc.setParentId(targetParentId);
+        boolean wasPreviouslyEmbedded = Boolean.TRUE.equals(doc.getAllowEmbedded());
+        doc.setAllowEmbedded(allowEmbedded);
+        doc.setAiIndexed(allowEmbedded && isRagSupported(doc));
         ProjectDocument savedDoc = projectDocumentRepository.save(doc);
 
-        if (!Boolean.TRUE.equals(savedDoc.getIsFolder())) {
-            if (!wasUnderDocs && nowUnderDocs) {
-                aiIndexEventService.createPendingEvent(savedDoc, AiIndexOperation.INDEX);
-            } else if (wasUnderDocs && !nowUnderDocs) {
-                aiIndexEventService.createPendingEvent(savedDoc, AiIndexOperation.DEINDEX);
-            }
+        if (!wasPreviouslyEmbedded && allowEmbedded) {
+            dispatchIndex(savedDoc);
+        } else if (wasPreviouslyEmbedded && !allowEmbedded) {
+            dispatchDeindex(savedDoc);
         }
 
         return toResponse(savedDoc);
     }
 
-    // ────────── UPLOAD ──────────
+    @Transactional
+    public ProjectDocumentResponse moveDocument(UUID projectId, UUID docId, UUID targetParentId) {
+        requireProjectMember(projectId);
+        ProjectDocument doc = projectDocumentRepository.findByProjectIdAndId(projectId, docId)
+                .orElseThrow(() -> new AppException(DocumentErrorCode.FILE_NOT_FOUND));
+
+        doc.setParentId(targetParentId);
+        return toResponse(projectDocumentRepository.save(doc));
+    }
 
     @Transactional
-    public ProjectDocumentResponse uploadDocument(UUID projectId, UUID folderId, MultipartFile file) throws Exception {
+    public ProjectDocumentResponse uploadDocument(UUID projectId,
+                                                  UUID folderId,
+                                                  MultipartFile file,
+                                                  boolean allowEmbedded) throws Exception {
         requireProjectMember(projectId);
-
         UUID userId = permissionHelper.getCurrentUserId();
 
         if (file.getSize() > MAX_UPLOAD_SIZE) {
@@ -151,26 +158,38 @@ public class ProjectDocumentService {
             objectStorageService.upload(objectKey, in, file.getSize(), file.getContentType());
         }
 
+        boolean ragSupported = isRagSupported(file.getOriginalFilename(), file.getContentType());
         ProjectDocument doc = projectDocumentRepository.save(ProjectDocument.builder()
                 .projectId(projectId)
                 .parentId(folderId)
-                .fileId(UUID.randomUUID()) // internal tracking id
+                .fileId(UUID.randomUUID())
                 .fileName(file.getOriginalFilename())
                 .fileSize(file.getSize())
                 .fileType(file.getContentType())
                 .uploadedBy(userId)
                 .cloudinaryPath(objectKey)
                 .createdAt(OffsetDateTime.now())
+            .allowEmbedded(allowEmbedded)
+            .aiIndexed(allowEmbedded && ragSupported)
                 .build());
 
-        if (isInsideDocsTree(projectId, folderId)) {
-            aiIndexEventService.createPendingEvent(doc, AiIndexOperation.INDEX);
+        log.info("Uploaded document id={} projectId={} fileName={} fileType={} allowEmbedded={} ragSupported={} aiIndexed={}",
+                doc.getId(),
+                projectId,
+                doc.getFileName(),
+                doc.getFileType(),
+                allowEmbedded,
+                ragSupported,
+                doc.getAiIndexed());
+
+        if (allowEmbedded && ragSupported) {
+            dispatchIndex(doc);
+        } else if (allowEmbedded) {
+            log.info("Skip INDEX dispatch for doc {} because file is not RAG supported", doc.getId());
         }
 
         return toResponse(doc);
     }
-
-    // ────────── DELETE ──────────
 
     @Transactional
     public void deleteDocument(UUID projectId, UUID docId) throws Exception {
@@ -180,29 +199,12 @@ public class ProjectDocumentService {
                 .orElseThrow(() -> new AppException(DocumentErrorCode.FILE_NOT_FOUND));
 
         UUID userId = permissionHelper.getCurrentUserId();
-        // Only uploader can delete (members can delete their own uploads)
         if (!doc.getUploadedBy().equals(userId)) {
             throw new AppException(DocumentErrorCode.PERMISSION_DENIED);
         }
 
         deleteRecursive(projectId, doc);
     }
-
-    private void deleteRecursive(UUID projectId, ProjectDocument doc) throws Exception {
-        if (Boolean.TRUE.equals(doc.getIsFolder())) {
-            List<ProjectDocument> children = projectDocumentRepository.findByProjectIdAndParentId(projectId, doc.getId());
-            for (ProjectDocument child : children) {
-                deleteRecursive(projectId, child);
-            }
-        } else {
-            if (doc.getCloudinaryPath() != null) {
-                objectStorageService.delete(doc.getCloudinaryPath());
-            }
-        }
-        projectDocumentRepository.delete(doc);
-    }
-
-    // ────────── DOWNLOAD LINK ──────────
 
     public ProjectDocumentResponse getDownloadLink(UUID projectId, UUID docId) throws Exception {
         requireProjectMember(projectId);
@@ -214,7 +216,59 @@ public class ProjectDocumentService {
         return toResponse(doc, presignedUrl);
     }
 
-    // ────────── HELPERS ──────────
+    private void deleteRecursive(UUID projectId, ProjectDocument doc) throws Exception {
+        if (Boolean.TRUE.equals(doc.getIsFolder())) {
+            List<ProjectDocument> children = projectDocumentRepository.findByProjectIdAndParentId(projectId, doc.getId());
+            for (ProjectDocument child : children) {
+                deleteRecursive(projectId, child);
+            }
+        } else {
+            if (Boolean.TRUE.equals(doc.getAiIndexed())) {
+                dispatchDeindex(doc);
+            }
+            if (doc.getCloudinaryPath() != null) {
+                objectStorageService.delete(doc.getCloudinaryPath());
+            }
+        }
+        projectDocumentRepository.delete(doc);
+    }
+
+    private void dispatchIndex(ProjectDocument doc) {
+        try {
+            String downloadUrl = objectStorageService.presignGetUrl(doc.getCloudinaryPath());
+            log.info("Dispatch INDEX docId={} projectId={} fileName={} fileType={} urlPresent={}",
+                    doc.getId(),
+                    doc.getProjectId(),
+                    doc.getFileName(),
+                    doc.getFileType(),
+                    downloadUrl != null && !downloadUrl.isBlank());
+            aiServiceFeignClient.dispatchIndexCommand(AiIndexCommandRequest.builder()
+                    .projectId(doc.getProjectId().toString())
+                    .documentId(doc.getId().toString())
+                    .operation("INDEX")
+                    .fileName(doc.getFileName())
+                    .fileType(doc.getFileType())
+                    .downloadUrl(downloadUrl)
+                    .build());
+            log.info("Dispatch INDEX completed for doc {}", doc.getId());
+        } catch (Exception e) {
+            log.warn("Failed to dispatch INDEX for doc {}: {}", doc.getId(), e.getMessage());
+        }
+    }
+
+    private void dispatchDeindex(ProjectDocument doc) {
+        try {
+            log.info("Dispatch DEINDEX docId={} projectId={}", doc.getId(), doc.getProjectId());
+            aiServiceFeignClient.dispatchIndexCommand(AiIndexCommandRequest.builder()
+                    .projectId(doc.getProjectId().toString())
+                    .documentId(doc.getId().toString())
+                    .operation("DEINDEX")
+                    .build());
+            log.info("Dispatch DEINDEX completed for doc {}", doc.getId());
+        } catch (Exception e) {
+            log.warn("Failed to dispatch DEINDEX for doc {}: {}", doc.getId(), e.getMessage());
+        }
+    }
 
     private ProjectDocumentResponse toResponse(ProjectDocument doc) {
         return toResponse(doc, null);
@@ -233,6 +287,8 @@ public class ProjectDocumentService {
                 .downloadUrl(downloadUrl)
                 .isFolder(doc.getIsFolder())
                 .parentId(doc.getParentId())
+                .allowEmbedded(doc.getAllowEmbedded())
+                .aiIndexed(doc.getAiIndexed())
                 .build();
     }
 
@@ -240,33 +296,17 @@ public class ProjectDocumentService {
         return "document/projects/" + projectId + "/" + System.currentTimeMillis() + "-" + fileName;
     }
 
-    private boolean isFileUnderDocsTree(UUID projectId, UUID parentId, Boolean isFolder) {
-        if (Boolean.TRUE.equals(isFolder)) {
-            return false;
-        }
-        return isInsideDocsTree(projectId, parentId);
+    private boolean isRagSupported(ProjectDocument doc) {
+        return isRagSupported(doc.getFileName(), doc.getFileType());
     }
 
-    private boolean isInsideDocsTree(UUID projectId, UUID folderId) {
-        if (folderId == null) {
-            return false;
-        }
-
-        ProjectDocument current = projectDocumentRepository.findByProjectIdAndId(projectId, folderId).orElse(null);
-        while (current != null) {
-            if (Boolean.TRUE.equals(current.getIsFolder())
-                    && current.getParentId() == null
-                    && current.getFileName() != null
-                    && DEFAULT_DOCS_FOLDER_NAME.equalsIgnoreCase(current.getFileName())) {
-                return true;
-            }
-
-            UUID parentId = current.getParentId();
-            if (parentId == null) {
-                return false;
-            }
-            current = projectDocumentRepository.findByProjectIdAndId(projectId, parentId).orElse(null);
-        }
-        return false;
+    private boolean isRagSupported(String fileName, String fileType) {
+        String normalizedFileName = fileName != null ? fileName.toLowerCase() : "";
+        String normalizedFileType = fileType != null ? fileType.toLowerCase() : "";
+        return normalizedFileName.endsWith(".txt")
+                || normalizedFileType.contains("text")
+                || normalizedFileType.contains("json")
+                || normalizedFileType.contains("xml")
+                || normalizedFileType.contains("markdown");
     }
 }
